etc/iptables/rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [255:45953]
:LOG_PINGDEATH - [0:0]
:fail2ban-ssh - [0:0]
-A INPUT -s 207.29.224.0/19 -j DROP
-A INPUT -s 206.223.144.0/20 -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -f -j LOG --log-prefix "[IPTABLES FRAGMENT] : "
-A INPUT -f -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -j LOG_PINGDEATH
-A INPUT -p tcp -m tcp --dport 443 -m u32 --u32 "0x34=0x18030000:0x1803ffff" -j LOG --log-prefix "[OpenSSL HEARTBLEED] : "
-A INPUT -p tcp -m tcp --dport 443 -m u32 --u32 "0x34=0x18030000:0x1803ffff" -j DROP
-A INPUT -d 255.255.255.255/32 -j DROP
-A INPUT -d 224.0.0.1/32 -j DROP
-A INPUT -p tcp -m tcp --dport 113 -j REJECT --reject-with tcp-reset
-A INPUT -p tcp -m tcp --dport 11111 -m state --state NEW -m recent --set --name SSH --mask 255.255.255.255 --rsource
-A INPUT -p tcp -m tcp --dport 11111 -m state --state NEW -m recent --update --seconds 900 --hitcount 10 --rttl --name SSH --mask 255.255.255.255 --rsource -j LOG --log-prefix "SSH attack: "
-A INPUT -p tcp -m tcp --dport 11111 -m state --state NEW -m recent --update --seconds 900 --hitcount 10 --rttl --name SSH --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m tcp --dport 3306 -m state --state NEW -m recent --set --name MYSQL --mask 255.255.255.255 --rsource
-A INPUT -p tcp -m tcp --dport 3306 -m state --state NEW -m recent --update --seconds 600 --hitcount 10 --rttl --name MYSQL --mask 255.255.255.255 --rsource -j LOG --log-prefix "MYSQL attack: "
-A INPUT -p tcp -m tcp --dport 3306 -m state --state NEW -m recent --update --seconds 600 --hitcount 10 --rttl --name MYSQL --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m tcp --dport 5432 -m state --state NEW -m recent --set --name POSTGRES --mask 255.255.255.255 --rsource
-A INPUT -p tcp -m tcp --dport 5432 -m state --state NEW -m recent --update --seconds 600 --hitcount 10 --rttl --name POSTGRES --mask 255.255.255.255 --rsource -j LOG --log-prefix "POSTGRES attack: "
-A INPUT -p tcp -m tcp --dport 5432 -m state --state NEW -m recent --update --seconds 600 --hitcount 10 --rttl --name POSTGRES --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --set --name SSH22 --mask 255.255.255.255 --rsource
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 900 --hitcount 10 --rttl --name SSH22 --mask 255.255.255.255 --rsource -j LOG --log-prefix "SSH22 attack: "
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 900 --hitcount 10 --rttl --name SSH22 --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m tcp --dport 11111 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 123 -j ACCEPT
-A INPUT -p udp -m udp --dport 123 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9160 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9418 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8787 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5800 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5900 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1099 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1100 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1101 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1102 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1103 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1104 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1880 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3001 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3002 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3003 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4567 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4848 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5001 -j ACCEPT
-A INPUT -p udp -m udp --dport 5001 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9090 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9999 -j ACCEPT
-A INPUT -j DROP
-A FORWARD -j DROP
-A LOG_PINGDEATH -m limit --limit 1/sec --limit-burst 4 -j ACCEPT
-A LOG_PINGDEATH -j LOG --log-prefix "[IPTABLES PINGDEATH] : "
-A LOG_PINGDEATH -j DROP
COMMIT
